changed background color from salmon to magenta

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: Gill Sans, sans-serif;
-  background-color: salmon;
+  background-color: magenta;
   text-align: center;
 }
 
