--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body {
   font-family: Gill Sans, sans-serif;
-  background-color: magenta;
+  background-color: #f5daf0;
   text-align: center;
 }
 
@@ -22,6 +22,8 @@ img {
   margin-left: auto;
   margin-right: auto;
   width: 30%;
+  border-radius: 15px;
+
 
 }
 
