modified files for today's class

--- a/css/melissa.css
+++ b/css/melissa.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Courier New;
+  font-family: Courier;
   background-color: salmon;
   text-align: center;
 }
@@ -11,7 +11,14 @@ a {
   padding: 10px;
 }
 
-#fav-num {
-	color: hotpink;
-	background-color: white;
+table {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
 }
+
+td {
+  padding: 5px;
+  border: 1px solid;
+}
+
