--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Gill Sans, sans-serif;
+  font-family: "Gill Sans";
   background-color: #f5daf0;
   text-align: center;
 }
@@ -10,24 +10,5 @@ a {
   background-color: lavender;
   padding: 10px;
   border-radius: 25px;
+  margin: 20px;
 }
-
-div {
-   margin-bottom: 10px;
-}
-
-
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 30%;
-  border-radius: 15px;
-
-
-}
-
-.link {
-  margin: 40px;
-}
-
